slurm-21.out
  File "/home/rice/jmc32/DNN_for_Pt_Assignment-master/DNN_Hyperparameters/Hyperasexamplerun.py", line 94
    verbose=2,
          ^
SyntaxError: invalid syntax
